--- a/neural_network/untitled.ipynb
+++ b/neural_network/untitled.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This is an exploration notebook on LSTM model. Most of the code comes from Jason Browniee's [tutorial](https://machinelearningmastery.com/multivariate-time-series-forecasting-lstms-keras/)  \"Multivariate Time Series Forecasting with LSTMs in Keras\""
+    "### This is an exploration notebook on LSTM model. Most of the code is based on Jason Browniee's [tutorial](https://machinelearningmastery.com/multivariate-time-series-forecasting-lstms-keras/)  \"Multivariate Time Series Forecasting with LSTMs in Keras\""
    ]
   },
   {
