--- a/neural_network/lstm_exploration.ipynb
+++ b/neural_network/lstm_exploration.ipynb
@@ -2037,10 +2037,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 244,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.05181892,  0.28194454,  0.0966801 ,  0.20990247,  0.12458476,\n",
+       "       -0.24822547,  0.1608727 ,  0.25093767, -0.15489404, -0.49607548,\n",
+       "        0.0290302 ,  0.19787276,  0.1570537 ,  0.2818792 , -0.03330187,\n",
+       "        0.14023979,  0.04472718,  0.01569658,  0.19302052,  0.26149487,\n",
+       "        0.30822203, -0.18482761,  0.05968653,  0.19897044,  0.09017146,\n",
+       "       -0.15345664,  0.1967579 ,  0.04908905,  0.02547368, -0.36055055,\n",
+       "        0.07568938, -0.20471883,  0.21706791,  0.30695242,  0.05263343,\n",
+       "       -0.27812722, -0.25576594,  0.18431732,  0.13228644,  0.01278343,\n",
+       "       -0.02279938,  0.19760032, -0.6144366 ,  0.17628524,  0.23955068,\n",
+       "        0.17437552,  0.14427693, -0.20884903,  0.31228793, -0.019119  ],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# w12_i = w1['i'][0].append(w2[i][0])\n",
+    "w1['i'][0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2051,7 +2075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 240,
    "metadata": {
     "scrolled": false
    },
@@ -2070,6 +2094,7 @@
     }
    ],
    "source": [
+    "# plot input gate weights for the first layer\n",
     "pyplot.matshow(w1['i'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2117,6 +2142,8 @@
     }
    ],
    "source": [
+    "# plot forget gate weights for the first layer\n",
+    "\n",
     "pyplot.matshow(w1['f'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2143,6 +2170,9 @@
     }
    ],
    "source": [
+    "# plot cell state weights for the first layer\n",
+    "\n",
+    "\n",
     "pyplot.matshow(w1['c'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2169,6 +2199,9 @@
     }
    ],
    "source": [
+    "# plot output gate weights for the first layer\n",
+    "\n",
+    "\n",
     "pyplot.matshow(w1['o'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2201,6 +2234,9 @@
     }
    ],
    "source": [
+    "# plot input gate weights for previous hidden states for the first layer\n",
+    "\n",
+    "\n",
     "fig, ax = pyplot.subplots(figsize=(10,10))\n",
     "ax.matshow(u1['i'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "fig.show()"
@@ -2227,6 +2263,9 @@
     }
    ],
    "source": [
+    "# plot input gate weights for previous hidden states for the first layer\n",
+    "\n",
+    "\n",
     "pyplot.matshow(u1['i'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2251,6 +2290,9 @@
     }
    ],
    "source": [
+    "# plot forget gate weights for previous hidden states for the first layer\n",
+    "\n",
+    "\n",
     "pyplot.matshow(u1['f'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2275,6 +2317,9 @@
     }
    ],
    "source": [
+    "# plot cell state weights for previous hidden states for the first layer\n",
+    "\n",
+    "\n",
     "pyplot.matshow(u1['c'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2299,6 +2344,9 @@
     }
    ],
    "source": [
+    "# plot output gate weights for previous hidden states for the first layer\n",
+    "\n",
+    "\n",
     "pyplot.matshow(u1['o'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2323,6 +2371,9 @@
     }
    ],
    "source": [
+    "# plot input gate weights for the second layer\n",
+    "\n",
+    "\n",
     "pyplot.matshow(w2['i'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2347,6 +2398,8 @@
     }
    ],
    "source": [
+    "# plot forget gate weights for the second layer\n",
+    "\n",
     "pyplot.matshow(w2['f'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2371,6 +2424,9 @@
     }
    ],
    "source": [
+    "# plot cell state weights for the second layer\n",
+    "\n",
+    "\n",
     "pyplot.matshow(w2['c'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2395,6 +2451,9 @@
     }
    ],
    "source": [
+    "# plot output gate weights for the second layer\n",
+    "\n",
+    "\n",
     "pyplot.matshow(w2['o'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2419,6 +2478,9 @@
     }
    ],
    "source": [
+    "\n",
+    "# plot input gate weights for previous hidden states for the second layer\n",
+    "\n",
     "pyplot.matshow(u2['i'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2443,6 +2505,9 @@
     }
    ],
    "source": [
+    "# plot forget gate weights for previous hidden states for the second layer\n",
+    "\n",
+    "\n",
     "pyplot.matshow(u2['f'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2467,6 +2532,8 @@
     }
    ],
    "source": [
+    "# plot cell state weights for previous hidden states for the second layer\n",
+    "\n",
     "pyplot.matshow(u2['c'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
@@ -2493,6 +2560,9 @@
     }
    ],
    "source": [
+    "# plot output gate weights for previous hidden states for the second layer\n",
+    "\n",
+    "\n",
     "pyplot.matshow(u2['o'], cmap=pyplot.cm.RdBu, vmin=-1, vmax=1)\n",
     "pyplot.colorbar()\n",
     "pyplot.show()"
