take a look at output files

--- a/neural_network/data_process.ipynb
+++ b/neural_network/data_process.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 127,
    "metadata": {
     "scrolled": false
    },
@@ -113,7 +113,7 @@
        "4  [0.169632449746131, 0.093373946845531, -0.1889...  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,6 +121,7 @@
    "source": [
     "w1 = pd.read_json('data/w1.json')\n",
     "w2 = pd.read_json('data/w2.json')\n",
+    "l1 = pd.read_json('data/l1_out.json')\n",
     "w1.head()"
    ]
   },
@@ -290,7 +291,7 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -442,6 +443,187 @@
     "w1 = w1.set_index('feature').reset_index()\n",
     "w1.head(8)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>[-0.006461536977440001, 0.016888493672013002, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>[-0.004488578066229001, 0.018767081201076, 0.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>[-0.00398405175656, 0.022323260083794, 0.00019...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>[-0.001311000436544, 0.024978537112474, -0.000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>[-0.0050592045299700005, 0.020470449700951, -0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8755</td>\n",
+       "      <td>[-0.013148417696356001, 0.013123850338160001, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8756</td>\n",
+       "      <td>[-0.013809746131300002, 0.014206277206540002, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8757</td>\n",
+       "      <td>[-0.013040127232670002, 0.013496533967554, 0.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8758</td>\n",
+       "      <td>[-0.014740015380084001, 0.016132129356265002, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8759</td>\n",
+       "      <td>[-0.014300365932285002, 0.015868052840232003, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8760 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      0\n",
+       "0     [-0.006461536977440001, 0.016888493672013002, ...\n",
+       "1     [-0.004488578066229001, 0.018767081201076, 0.0...\n",
+       "2     [-0.00398405175656, 0.022323260083794, 0.00019...\n",
+       "3     [-0.001311000436544, 0.024978537112474, -0.000...\n",
+       "4     [-0.0050592045299700005, 0.020470449700951, -0...\n",
+       "...                                                 ...\n",
+       "8755  [-0.013148417696356001, 0.013123850338160001, ...\n",
+       "8756  [-0.013809746131300002, 0.014206277206540002, ...\n",
+       "8757  [-0.013040127232670002, 0.013496533967554, 0.0...\n",
+       "8758  [-0.014740015380084001, 0.016132129356265002, ...\n",
+       "8759  [-0.014300365932285002, 0.015868052840232003, ...\n",
+       "\n",
+       "[8760 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-0.006461536977440001,\n",
+       " 0.016888493672013002,\n",
+       " 0.00046840438153500006,\n",
+       " 0.016772102564573,\n",
+       " 0.035766296088695006,\n",
+       " 0.00730926124379,\n",
+       " -0.006878816056996,\n",
+       " 0.034765910357236,\n",
+       " 0.03064215555787,\n",
+       " -0.002268827985972,\n",
+       " 0.00035435386234800004,\n",
+       " -0.014975950121879002,\n",
+       " -0.017715169116854,\n",
+       " -0.016111670061945003,\n",
+       " -0.00040432918467500005,\n",
+       " -0.014666954986751001,\n",
+       " -0.006343149580061,\n",
+       " -0.015041620470583002,\n",
+       " 0.003803318133577,\n",
+       " -0.004350605886429,\n",
+       " -0.01777059212327,\n",
+       " 0.0017173376400020002,\n",
+       " 0.034219153225421,\n",
+       " 2.389505243627354e-05,\n",
+       " -0.031276777386665004,\n",
+       " -0.014316280372440001,\n",
+       " -0.027553843334317003,\n",
+       " 0.018457159399986,\n",
+       " 0.013530808500945,\n",
+       " -0.008060554042458,\n",
+       " 0.010737177915871001,\n",
+       " 0.002713395748287,\n",
+       " 0.016039045527577,\n",
+       " 0.030119892209768004,\n",
+       " -0.005682794842869001,\n",
+       " -0.0020413089077910003,\n",
+       " 0.0015295851044350001,\n",
+       " -0.036067698150873004,\n",
+       " -0.005644960794597,\n",
+       " -0.011654245667159,\n",
+       " 0.00032367464154900005,\n",
+       " -0.0034269387833770005,\n",
+       " -0.01141782850027,\n",
+       " 0.00668726209551,\n",
+       " 0.001708036055788,\n",
+       " -0.006326198577880001,\n",
+       " 0.038707714527845,\n",
+       " -0.021638387814164002,\n",
+       " 0.015027443878352002,\n",
+       " 0.013234123587608]"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1669,7 +1851,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w1_flatten.to_csv('data/w1_flatten.csv')"
+    "# w1_flatten.to_csv('data/w1_flatten.csv')"
    ]
   },
   {
