added function to extract weight for each epoch

--- a/neural_network/lstm_exploration.ipynb
+++ b/neural_network/lstm_exploration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,7 @@
     "from keras.layers import LSTM,Dense,Dropout\n",
     "from keras import backend as K\n",
     "from keras.callbacks import ModelCheckpoint\n",
+    "from keras.callbacks import Callback\n",
     "from keras.models import load_model\n",
     "from keras.utils import plot_model\n",
     "\n",
@@ -444,6 +445,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CollectWeightCallback(Callback):\n",
+    "    def __init__(self, layer_index):\n",
+    "        super(CollectWeightCallback, self).__init__()\n",
+    "        self.layer_index = layer_index\n",
+    "        self.weights = []\n",
+    "\n",
+    "    def on_epoch_end(self, epoch, logs=None):\n",
+    "        layer = self.model.layers[self.layer_index]\n",
+    "        self.weights.append(layer.get_weights())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -601,10 +619,16 @@
     "start = time.time()\n",
     "\n",
     "# fit network\n",
+    "\n",
+    "cbk = CollectWeightCallback(layer_index=-1)\n",
     "# history = model.fit(train_X, train_y, epochs=50, batch_size=72, validation_data=(test_X, test_y), verbose=2, shuffle=False,\n",
-    "#                    callbacks=[ModelCheckpoint(filepath='weights{epoch:03d}.hdf5')])\n",
+    "#                    callbacks=[cbk])\n",
     "history = model.fit(train_X, train_y, epochs=50, batch_size=72, validation_data=(test_X, test_y), verbose=2, shuffle=False,\n",
     "                   callbacks=[ModelCheckpoint(filepath='weights{epoch:03d}.hdf5')])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "end = time.time()\n",
     "print(\"Time took {:3.1f} min\".format((end-start)/60))\n",
     "# plot history\n",
@@ -720,13 +744,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save model to file\n",
     "model.save('data/lstm_model.h5')\n",
-    "del model\n",
+    "del model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# load model from file\n",
     "model = load_model('data/lstm_model.h5')"
    ]
@@ -740,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -748,12 +780,12 @@
     {
      "data": {
       "text/plain": [
-       "[<keras.layers.recurrent.LSTM at 0x1a3c0e5350>,\n",
-       " <keras.layers.recurrent.LSTM at 0x1a3c0eca50>,\n",
-       " <keras.layers.core.Dense at 0x1a3d947b10>]"
+       "[<keras.layers.recurrent.LSTM at 0x10cad3bd0>,\n",
+       " <keras.layers.recurrent.LSTM at 0x1a39b20150>,\n",
+       " <keras.layers.core.Dense at 0x1a3c7cfc10>]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -777,7 +809,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1624,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1933,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1942,7 +1974,7 @@
        "dict_keys(['i', 'f', 'c', 'o'])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1962,7 +1994,7 @@
        "dict_keys(['i', 'f', 'c', 'o'])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1973,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -1984,7 +2016,7 @@
        "((8, 50), (50, 50), (50, 1))"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -2006,7 +2038,7 @@
        "((50, 50), (50, 50), (50, 1))"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2017,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2026,7 +2058,7 @@
        "(-0.7308838, 0.31228793)"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2037,8 +2069,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2056,7 +2090,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2067,6 +2101,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2075,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
