--- a/neural_network/lstm_exploration.ipynb
+++ b/neural_network/lstm_exploration.ipynb
@@ -3010,28 +3010,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
-   "metadata": {},
+   "execution_count": 302,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>000</th>\n",
+       "      <th>001</th>\n",
+       "      <th>002</th>\n",
+       "      <th>003</th>\n",
+       "      <th>004</th>\n",
+       "      <th>005</th>\n",
+       "      <th>006</th>\n",
+       "      <th>007</th>\n",
+       "      <th>008</th>\n",
+       "      <th>009</th>\n",
+       "      <th>...</th>\n",
+       "      <th>040</th>\n",
+       "      <th>041</th>\n",
+       "      <th>042</th>\n",
+       "      <th>043</th>\n",
+       "      <th>044</th>\n",
+       "      <th>045</th>\n",
+       "      <th>046</th>\n",
+       "      <th>047</th>\n",
+       "      <th>048</th>\n",
+       "      <th>049</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.052670</td>\n",
+       "      <td>0.008673</td>\n",
+       "      <td>0.021526</td>\n",
+       "      <td>0.025231</td>\n",
+       "      <td>0.025042</td>\n",
+       "      <td>0.023725</td>\n",
+       "      <td>0.022298</td>\n",
+       "      <td>0.021579</td>\n",
+       "      <td>0.021694</td>\n",
+       "      <td>0.021585</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.041889</td>\n",
+       "      <td>0.042300</td>\n",
+       "      <td>0.042935</td>\n",
+       "      <td>0.043375</td>\n",
+       "      <td>0.044237</td>\n",
+       "      <td>0.045076</td>\n",
+       "      <td>0.045766</td>\n",
+       "      <td>0.046492</td>\n",
+       "      <td>0.047128</td>\n",
+       "      <td>0.047420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.150594</td>\n",
+       "      <td>0.197816</td>\n",
+       "      <td>0.197319</td>\n",
+       "      <td>0.173377</td>\n",
+       "      <td>0.140203</td>\n",
+       "      <td>0.110961</td>\n",
+       "      <td>0.088396</td>\n",
+       "      <td>0.073150</td>\n",
+       "      <td>0.063475</td>\n",
+       "      <td>0.055399</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.007484</td>\n",
+       "      <td>-0.007729</td>\n",
+       "      <td>-0.007483</td>\n",
+       "      <td>-0.008993</td>\n",
+       "      <td>-0.009356</td>\n",
+       "      <td>-0.010152</td>\n",
+       "      <td>-0.011916</td>\n",
+       "      <td>-0.014945</td>\n",
+       "      <td>-0.017228</td>\n",
+       "      <td>-0.019541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.080388</td>\n",
+       "      <td>0.170865</td>\n",
+       "      <td>0.184298</td>\n",
+       "      <td>0.181782</td>\n",
+       "      <td>0.174573</td>\n",
+       "      <td>0.166542</td>\n",
+       "      <td>0.159377</td>\n",
+       "      <td>0.153650</td>\n",
+       "      <td>0.150475</td>\n",
+       "      <td>0.147848</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.172915</td>\n",
+       "      <td>0.172929</td>\n",
+       "      <td>0.173658</td>\n",
+       "      <td>0.174455</td>\n",
+       "      <td>0.176281</td>\n",
+       "      <td>0.177816</td>\n",
+       "      <td>0.178992</td>\n",
+       "      <td>0.180519</td>\n",
+       "      <td>0.181721</td>\n",
+       "      <td>0.181818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.020602</td>\n",
+       "      <td>0.013912</td>\n",
+       "      <td>0.014908</td>\n",
+       "      <td>0.014314</td>\n",
+       "      <td>0.014151</td>\n",
+       "      <td>0.014854</td>\n",
+       "      <td>0.015772</td>\n",
+       "      <td>0.017010</td>\n",
+       "      <td>0.017252</td>\n",
+       "      <td>0.017479</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.037231</td>\n",
+       "      <td>-0.039785</td>\n",
+       "      <td>-0.042259</td>\n",
+       "      <td>-0.044706</td>\n",
+       "      <td>-0.046775</td>\n",
+       "      <td>-0.049625</td>\n",
+       "      <td>-0.052275</td>\n",
+       "      <td>-0.054919</td>\n",
+       "      <td>-0.057219</td>\n",
+       "      <td>-0.059682</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.218012</td>\n",
+       "      <td>0.269937</td>\n",
+       "      <td>0.273223</td>\n",
+       "      <td>0.270324</td>\n",
+       "      <td>0.265664</td>\n",
+       "      <td>0.261516</td>\n",
+       "      <td>0.257008</td>\n",
+       "      <td>0.253284</td>\n",
+       "      <td>0.250386</td>\n",
+       "      <td>0.248039</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.233127</td>\n",
+       "      <td>0.232551</td>\n",
+       "      <td>0.232056</td>\n",
+       "      <td>0.231385</td>\n",
+       "      <td>0.230963</td>\n",
+       "      <td>0.229865</td>\n",
+       "      <td>0.228977</td>\n",
+       "      <td>0.227970</td>\n",
+       "      <td>0.226823</td>\n",
+       "      <td>0.225783</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 50 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "RangeIndex(start=0, stop=400, step=1)"
+       "        000       001       002       003       004       005       006  \\\n",
+       "0 -0.052670  0.008673  0.021526  0.025231  0.025042  0.023725  0.022298   \n",
+       "1  0.150594  0.197816  0.197319  0.173377  0.140203  0.110961  0.088396   \n",
+       "2  0.080388  0.170865  0.184298  0.181782  0.174573  0.166542  0.159377   \n",
+       "3 -0.020602  0.013912  0.014908  0.014314  0.014151  0.014854  0.015772   \n",
+       "4  0.218012  0.269937  0.273223  0.270324  0.265664  0.261516  0.257008   \n",
+       "\n",
+       "        007       008       009  ...       040       041       042       043  \\\n",
+       "0  0.021579  0.021694  0.021585  ...  0.041889  0.042300  0.042935  0.043375   \n",
+       "1  0.073150  0.063475  0.055399  ... -0.007484 -0.007729 -0.007483 -0.008993   \n",
+       "2  0.153650  0.150475  0.147848  ...  0.172915  0.172929  0.173658  0.174455   \n",
+       "3  0.017010  0.017252  0.017479  ... -0.037231 -0.039785 -0.042259 -0.044706   \n",
+       "4  0.253284  0.250386  0.248039  ...  0.233127  0.232551  0.232056  0.231385   \n",
+       "\n",
+       "        044       045       046       047       048       049  \n",
+       "0  0.044237  0.045076  0.045766  0.046492  0.047128  0.047420  \n",
+       "1 -0.009356 -0.010152 -0.011916 -0.014945 -0.017228 -0.019541  \n",
+       "2  0.176281  0.177816  0.178992  0.180519  0.181721  0.181818  \n",
+       "3 -0.046775 -0.049625 -0.052275 -0.054919 -0.057219 -0.059682  \n",
+       "4  0.230963  0.229865  0.228977  0.227970  0.226823  0.225783  \n",
+       "\n",
+       "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "w_i = w_i.transpose()\n",
-    "w_i.columns"
+    "w_i.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transpose(df):\n",
+    "    df.reset_index(level=0,drop=True)\n",
+    "    new_df=df.transpose()\n",
+    "    return new_df\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    \n",
+    "def transform_feature_data(feature, n, gate):\n",
+    "    feature = feature.reset_index().rename(columns={'index': 'epoch'})\n",
+    "    melt = pd.melt(feature, id_vars='epoch', value_vars= feature.columns[1:],var_name='cell',value_name='weight')\n",
+    "    melt['gate']=[gate for _ in range(2500)]    \n",
+    "    melt['feature'] = ['n' for _ in range(2500)]\n",
+    "    return melt\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -4444,20 +4660,20 @@
        "[50 rows x 50 columns]"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "feature_1 = w_i.iloc[:,0:50]\n",
-    "feature_2 = w_i.iloc[:,50:100]\n",
-    "feature_3 = w_i.iloc[:,100:150]\n",
-    "feature_4 = w_i.iloc[:,150:200]\n",
-    "feature_5 = w_i.iloc[:,200:250]\n",
-    "feature_6 = w_i.iloc[:,250:300]\n",
-    "feature_7 = w_i.iloc[:,300:350]\n",
-    "feature_8 = w_i.iloc[:,350:400]\n",
+    "feature_1 = transpose(w_i).iloc[:,0:50]\n",
+    "feature_2 = transpose(w_i).iloc[:,50:100]\n",
+    "feature_3 = transpose(w_i).iloc[:,100:150]\n",
+    "feature_4 = transpose(w_i).iloc[:,150:200]\n",
+    "feature_5 = transpose(w_i).iloc[:,200:250]\n",
+    "feature_6 = transpose(w_i).iloc[:,250:300]\n",
+    "feature_7 = transpose(w_i).iloc[:,300:350]\n",
+    "feature_8 = transpose(w_i).iloc[:,350:400]\n",
     "feature_8\n"
    ]
   },
@@ -6067,8 +6283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def transform_feature_data(df, gate,feature, cell):\n",
-    "    "
+    "transform_feature_data(feature, n, gate)"
    ]
   },
   {
