--- a/neural_network/data_process.ipynb
+++ b/neural_network/data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 337,
    "metadata": {
     "scrolled": true
    },
@@ -115,7 +115,7 @@
        "4  [0.169632449746131, 0.093373946845531, -0.1889...  "
       ]
      },
-     "execution_count": 203,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "(50, 4)"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 339,
    "metadata": {
     "scrolled": true
    },
@@ -168,7 +168,7 @@
        "(8, 4)"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 339,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "4  [-0.17305570840835502, -0.05950807034969301, 0...  "
       ]
      },
-     "execution_count": 206,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1803,7 +1803,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " weights = pd.HDFStore('weights001.hdf5',mode='r')"
+    "#  weights = pd.HDFStore('weights001.hdf5',mode='r')"
    ]
   },
   {
@@ -1811,11 +1811,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def extract_weights(file_path, layer ):\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1824,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
@@ -1833,7 +1836,7 @@
        "['model_weights', 'optimizer_weights']"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1847,18 +1850,80 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def read_weight_file(file_path):\n",
+    "    f = h5py.File(file_path,'r')\n",
+    "    return f"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 348,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<KeysViewHDF5 ['LSTM1', 'LSTM2', 'output']>"
+      ]
+     },
+     "execution_count": 348,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# output keys for three layers\n",
+    "f['model_weights'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 351,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<KeysViewHDF5 ['LSTM1_2']>"
+      ]
+     },
+     "execution_count": 351,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# first layer key\n",
+    "f['model_weights/LSTM1'].keys()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<KeysViewHDF5 ['bias:0', 'kernel:0', 'recurrent_kernel:0']>"
+      ]
+     },
+     "execution_count": 352,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "f['model_weights/LSTM1/LSTM1_2'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -1867,7 +1932,7 @@
        "<HDF5 dataset \"kernel:0\": shape (8, 200), type \"<f4\">"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
