--- a/neural_network/data_process.ipynb
+++ b/neural_network/data_process.ipynb
@@ -1808,12 +1808,356 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_weights(file_path, layer ):\n",
-    "    pass"
+    "def read_weight_file(file_path):\n",
+    "    f = h5py.File(file_path,'r')\n",
+    "    return f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_feature_column(df):\n",
+    "    df.reset_index(inplace=True)\n",
+    "    df.rename(columns={'index':'feature'}, inplace=True)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_weights(file_path, n_layer ):\n",
+    "    f = read_weight_file(file_path)\n",
+    "    layer = f['model_weights/LSTM{}/LSTM{}_2/kernel:0'.format(n_layer, n_layer)]\n",
+    "    df = pd.DataFrame(np.array(layer))\n",
+    "    df = add_feature_column(df)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def melt_columns(df, gate):\n",
+    "    new_df = pd.melt(df,id_vars='feature', var_name='cell')\n",
+    "    return new_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 398,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ff = read_weight_file('weights050.hdf5')\n",
+    "# l = ff['model_weights/LSTM2/LSTM2_2/kernel:0']\n",
+    "# df = pd.DataFrame(np.array(l))\n",
+    "\n",
+    "# l = ff['model_weights/LSTM{}/LSTM{}_2/kernel:0'.format(1,1)]\n",
+    "# l\n",
+    "# df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 402,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>...</th>\n",
+       "      <th>190</th>\n",
+       "      <th>191</th>\n",
+       "      <th>192</th>\n",
+       "      <th>193</th>\n",
+       "      <th>194</th>\n",
+       "      <th>195</th>\n",
+       "      <th>196</th>\n",
+       "      <th>197</th>\n",
+       "      <th>198</th>\n",
+       "      <th>199</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.117547</td>\n",
+       "      <td>0.228513</td>\n",
+       "      <td>0.197600</td>\n",
+       "      <td>0.221709</td>\n",
+       "      <td>0.065749</td>\n",
+       "      <td>-0.091638</td>\n",
+       "      <td>0.125452</td>\n",
+       "      <td>0.191836</td>\n",
+       "      <td>-0.028967</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.119113</td>\n",
+       "      <td>0.188702</td>\n",
+       "      <td>-0.205422</td>\n",
+       "      <td>0.183130</td>\n",
+       "      <td>0.250060</td>\n",
+       "      <td>0.100179</td>\n",
+       "      <td>0.147411</td>\n",
+       "      <td>-0.076418</td>\n",
+       "      <td>0.145665</td>\n",
+       "      <td>0.059356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.068090</td>\n",
+       "      <td>0.171347</td>\n",
+       "      <td>-0.135032</td>\n",
+       "      <td>0.092353</td>\n",
+       "      <td>-0.043250</td>\n",
+       "      <td>0.185740</td>\n",
+       "      <td>-0.060391</td>\n",
+       "      <td>0.079146</td>\n",
+       "      <td>0.207147</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.022560</td>\n",
+       "      <td>0.118331</td>\n",
+       "      <td>0.153607</td>\n",
+       "      <td>0.128772</td>\n",
+       "      <td>-0.051008</td>\n",
+       "      <td>0.194754</td>\n",
+       "      <td>0.190554</td>\n",
+       "      <td>0.148532</td>\n",
+       "      <td>-0.049641</td>\n",
+       "      <td>-0.053445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.058304</td>\n",
+       "      <td>0.013584</td>\n",
+       "      <td>0.062412</td>\n",
+       "      <td>0.020988</td>\n",
+       "      <td>-0.093938</td>\n",
+       "      <td>0.202946</td>\n",
+       "      <td>-0.055341</td>\n",
+       "      <td>-0.127922</td>\n",
+       "      <td>0.017506</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.108171</td>\n",
+       "      <td>0.143858</td>\n",
+       "      <td>0.162169</td>\n",
+       "      <td>-0.060974</td>\n",
+       "      <td>-0.057658</td>\n",
+       "      <td>0.024511</td>\n",
+       "      <td>0.077144</td>\n",
+       "      <td>0.256684</td>\n",
+       "      <td>0.101911</td>\n",
+       "      <td>-0.003128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.100887</td>\n",
+       "      <td>-0.022718</td>\n",
+       "      <td>0.126053</td>\n",
+       "      <td>0.201533</td>\n",
+       "      <td>0.141704</td>\n",
+       "      <td>0.175244</td>\n",
+       "      <td>0.130956</td>\n",
+       "      <td>0.082275</td>\n",
+       "      <td>0.037205</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.114740</td>\n",
+       "      <td>-0.022415</td>\n",
+       "      <td>-0.138925</td>\n",
+       "      <td>-0.153003</td>\n",
+       "      <td>0.016759</td>\n",
+       "      <td>0.045816</td>\n",
+       "      <td>-0.048493</td>\n",
+       "      <td>-0.057928</td>\n",
+       "      <td>0.054804</td>\n",
+       "      <td>0.111618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.091172</td>\n",
+       "      <td>0.041045</td>\n",
+       "      <td>0.077922</td>\n",
+       "      <td>-0.082152</td>\n",
+       "      <td>0.166015</td>\n",
+       "      <td>0.131186</td>\n",
+       "      <td>-0.040957</td>\n",
+       "      <td>-0.006612</td>\n",
+       "      <td>0.160436</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.018034</td>\n",
+       "      <td>-0.053509</td>\n",
+       "      <td>0.110741</td>\n",
+       "      <td>-0.136877</td>\n",
+       "      <td>0.175758</td>\n",
+       "      <td>0.072305</td>\n",
+       "      <td>0.067100</td>\n",
+       "      <td>0.175058</td>\n",
+       "      <td>-0.086701</td>\n",
+       "      <td>0.145946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.044639</td>\n",
+       "      <td>0.007109</td>\n",
+       "      <td>-0.084142</td>\n",
+       "      <td>0.045545</td>\n",
+       "      <td>0.072123</td>\n",
+       "      <td>-0.098865</td>\n",
+       "      <td>-0.104038</td>\n",
+       "      <td>-0.033258</td>\n",
+       "      <td>0.044549</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.038930</td>\n",
+       "      <td>0.042532</td>\n",
+       "      <td>-0.004822</td>\n",
+       "      <td>-0.099817</td>\n",
+       "      <td>-0.011392</td>\n",
+       "      <td>-0.122887</td>\n",
+       "      <td>0.078266</td>\n",
+       "      <td>0.209248</td>\n",
+       "      <td>0.056640</td>\n",
+       "      <td>-0.037731</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.089588</td>\n",
+       "      <td>0.000279</td>\n",
+       "      <td>-0.153001</td>\n",
+       "      <td>-0.017321</td>\n",
+       "      <td>0.012529</td>\n",
+       "      <td>0.025126</td>\n",
+       "      <td>-0.102387</td>\n",
+       "      <td>0.010003</td>\n",
+       "      <td>0.038623</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.104140</td>\n",
+       "      <td>0.007361</td>\n",
+       "      <td>0.176073</td>\n",
+       "      <td>0.097311</td>\n",
+       "      <td>0.124752</td>\n",
+       "      <td>-0.137448</td>\n",
+       "      <td>0.015717</td>\n",
+       "      <td>-0.000250</td>\n",
+       "      <td>-0.183641</td>\n",
+       "      <td>-0.104314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-0.092848</td>\n",
+       "      <td>0.086859</td>\n",
+       "      <td>0.059108</td>\n",
+       "      <td>-0.130615</td>\n",
+       "      <td>-0.095755</td>\n",
+       "      <td>0.083634</td>\n",
+       "      <td>-0.149967</td>\n",
+       "      <td>0.031885</td>\n",
+       "      <td>-0.086366</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.093747</td>\n",
+       "      <td>-0.029110</td>\n",
+       "      <td>0.053869</td>\n",
+       "      <td>0.105747</td>\n",
+       "      <td>-0.187045</td>\n",
+       "      <td>0.070076</td>\n",
+       "      <td>0.064842</td>\n",
+       "      <td>-0.057639</td>\n",
+       "      <td>0.100357</td>\n",
+       "      <td>-0.133357</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 201 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   feature         0         1         2         3         4         5  \\\n",
+       "0        0  0.117547  0.228513  0.197600  0.221709  0.065749 -0.091638   \n",
+       "1        1  0.068090  0.171347 -0.135032  0.092353 -0.043250  0.185740   \n",
+       "2        2 -0.058304  0.013584  0.062412  0.020988 -0.093938  0.202946   \n",
+       "3        3 -0.100887 -0.022718  0.126053  0.201533  0.141704  0.175244   \n",
+       "4        4  0.091172  0.041045  0.077922 -0.082152  0.166015  0.131186   \n",
+       "5        5  0.044639  0.007109 -0.084142  0.045545  0.072123 -0.098865   \n",
+       "6        6  0.089588  0.000279 -0.153001 -0.017321  0.012529  0.025126   \n",
+       "7        7 -0.092848  0.086859  0.059108 -0.130615 -0.095755  0.083634   \n",
+       "\n",
+       "          6         7         8  ...       190       191       192       193  \\\n",
+       "0  0.125452  0.191836 -0.028967  ...  0.119113  0.188702 -0.205422  0.183130   \n",
+       "1 -0.060391  0.079146  0.207147  ...  0.022560  0.118331  0.153607  0.128772   \n",
+       "2 -0.055341 -0.127922  0.017506  ...  0.108171  0.143858  0.162169 -0.060974   \n",
+       "3  0.130956  0.082275  0.037205  ... -0.114740 -0.022415 -0.138925 -0.153003   \n",
+       "4 -0.040957 -0.006612  0.160436  ... -0.018034 -0.053509  0.110741 -0.136877   \n",
+       "5 -0.104038 -0.033258  0.044549  ...  0.038930  0.042532 -0.004822 -0.099817   \n",
+       "6 -0.102387  0.010003  0.038623  ... -0.104140  0.007361  0.176073  0.097311   \n",
+       "7 -0.149967  0.031885 -0.086366  ...  0.093747 -0.029110  0.053869  0.105747   \n",
+       "\n",
+       "        194       195       196       197       198       199  \n",
+       "0  0.250060  0.100179  0.147411 -0.076418  0.145665  0.059356  \n",
+       "1 -0.051008  0.194754  0.190554  0.148532 -0.049641 -0.053445  \n",
+       "2 -0.057658  0.024511  0.077144  0.256684  0.101911 -0.003128  \n",
+       "3  0.016759  0.045816 -0.048493 -0.057928  0.054804  0.111618  \n",
+       "4  0.175758  0.072305  0.067100  0.175058 -0.086701  0.145946  \n",
+       "5 -0.011392 -0.122887  0.078266  0.209248  0.056640 -0.037731  \n",
+       "6  0.124752 -0.137448  0.015717 -0.000250 -0.183641 -0.104314  \n",
+       "7 -0.187045  0.070076  0.064842 -0.057639  0.100357 -0.133357  \n",
+       "\n",
+       "[8 rows x 201 columns]"
+      ]
+     },
+     "execution_count": 402,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "epoch1 = extract_weights('weights002.hdf5',1)\n",
+    "epoch1"
    ]
   },
   {
@@ -1843,17 +2187,6 @@
    ],
    "source": [
     "list(f.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_weight_file(file_path):\n",
-    "    f = h5py.File(file_path,'r')\n",
-    "    return f"
    ]
   },
   {
@@ -2308,18 +2641,6 @@
    ],
    "source": [
     "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 293,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_feature_column(df):\n",
-    "    df.reset_index(inplace=True)\n",
-    "    df.rename(columns={'index':'feature'}, inplace=True)\n",
-    "    return df"
    ]
   },
   {
